--- a/regression.ipynb
+++ b/regression.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "OKzG9qZrODcB"
       },
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -304,7 +304,9 @@
         "\n",
         "> Note that heteroskedasticity is them having unequal variance that is, variance changing as the independent variable changes.\n",
         "\n",
-        ">> Breusch Pagan Test is a heteroskedasticity test.\n",
+        ">> Breusch Pagan Test is a heteroskedasticity test: https://prepnuggets.com/glossary/breusch-pagan-test/\n",
+        "\n",
+        ">> https://www.statology.org/breusch-pagan-test-python/\n",
         "\n",
         ">> Presence of heteroskedasticity can be inspected visually from residual plot."
       ]
@@ -1042,7 +1044,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1350,7 +1352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "hD4mMKQgXYcr"
       },
@@ -1371,7 +1373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1424,7 +1426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1870,7 +1872,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1913,7 +1915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "5MI8DwGEg20c"
       },
@@ -1937,7 +1939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2061,7 +2063,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2461,7 +2463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "p04uEcajf9Yr"
       },
@@ -2472,7 +2474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "q7grMWU5gPOX"
       },
@@ -2487,7 +2489,7 @@
         "id": "_lvZ0rb8D215"
       },
       "source": [
-        "> Checking for multicollinearity of independent variables: VIF is a diagnostic tool for detecting multicollinearity"
+        "> **Multicollinearity of independent variables: VIF is a diagnostic tool for detecting multicollinearity**"
       ]
     },
     {
@@ -2501,7 +2503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2947,7 +2949,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "ykbVU3FTVKYu"
       },
@@ -2996,7 +2998,7 @@
         "id": "2MFim4pJzLOZ"
       },
       "source": [
-        "> Recursive Feature Elimination (RFE) - just checking with scikit learn"
+        "> **Recursive Feature Elimination (RFE) - checking with scikit_learn**"
       ]
     },
     {
@@ -3116,7 +3118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4029,7 +4031,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4608,7 +4610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4640,7 +4642,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4673,7 +4675,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4716,7 +4718,7 @@
         "id": "-imBEsGKp-Sv",
         "outputId": "c19596cb-7cb1-42f3-80e0-41e82411296a"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4739,7 +4741,7 @@
         "id": "QksBIMs6qKSf",
         "outputId": "663343b1-0eef-4a2f-e206-485282e47f86"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4761,7 +4763,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "bhLxtrFwNIWD"
       },
@@ -4792,7 +4794,7 @@
         "id": "cpYpyMArqVgQ",
         "outputId": "35e580ea-e9df-43b1-c96b-198d04c5b69a"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4817,7 +4819,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "21VArV2YcAkp"
       },
@@ -4828,7 +4830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "4vq2ZOPtJPEk"
       },
@@ -4842,7 +4844,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4869,7 +4871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4895,7 +4897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4929,7 +4931,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5007,7 +5009,7 @@
         "id": "29Fndolskkzb"
       },
       "source": [
-        "> Features selected by correlation analysis while exploring data"
+        "> Features selected by correlation analysis while exploring data."
       ]
     },
     {
@@ -5024,7 +5026,7 @@
         "\n",
         ">> By RFE-> [TAX, GROSS AREA, LIVING AREA, ROOMS, BEDROOMS, KITCHEN]\n",
         "\n",
-        "> And then there're (predictors) features selected by VIF (values typically higher than 10 have multicollinearity).\n"
+        "> And then there're (predictors) features selected by VIF (values typically higher than 10 have multicollinearity) -> [TAX, GROSS AREA, LIVING AREA, ROOMS, BEDROOMS]\n"
       ]
     },
     {
@@ -5035,6 +5037,8 @@
       "source": [
         "Well, the target is 'value of house' which is predicted using OLS on 13 explanatory features ->   \n",
         "[TAX, GROSS AREA, LIVING AREA, ROOMS, BEDROOMS, KITCHEN, FULL BATH, HALF BATH, FIREPLACE, Old_REMODEL, Recent_REMODEL, LOT SQFT, FLOORS]\n",
+        "\n",
+        "-> might as well have used 6 'best' features based on the aforementioned techniques\n",
         "\n",
         "\n"
       ]
